# Shadows

./: .gitignore  2box.sh  2tri.sh  2triCamera.txt  2triLastLevelCamera.txt  CMakeLists.txt  README.md  csm.sh  downloadAndInstallPrerequisites.py  imgui.ini  ntri.sh  r512.sh  sin2tri.sh  sinntri.sh  sinsponza.sh  sintrigrid.sh  sintrigrid2.sh  sintrigrid3.sh  sphereDesk.sh  sponza.sh  storedCamera.txt  todo
src/CSSV/: BasicExtractSilhouettes.cpp  BasicExtractSilhouettes.h  CMakeLists.txt  CSSV.cpp  CSSV.h  DrawCaps.cpp  DrawCaps.h  DrawCapsProgram.cpp  DrawCapsProgram.h  DrawCapsShaders.cpp  DrawCapsShaders.h  DrawSides.cpp  DrawSides.h  DrawSidesProgram.cpp  DrawSidesProgram.h  DrawSidesShaders.cpp  DrawSidesShaders.h  ExtractSilhouetteShader.h  ExtractSilhouettes.cpp  ExtractSilhouettes.h  Fwd.h  InterleavedPlanesExtractSilhouettes.cpp  InterleavedPlanesExtractSilhouettes.h  InterleavedPlanesShader.h  Param.cpp  Param.h  PlanesExtractSilhouettes.cpp  PlanesExtractSilhouettes.h  capsShaders.cpp  capsShaders.h  createBasicEdges.cpp  createBasicEdges.h  createCapsBuffer.cpp  createCapsProgram.cpp  createCapsProgram.h  createCapsVAO.cpp  createCapsVAO.h  createDIBO.cpp  createDIBO.h  createDrawSidesProgram.cpp  (+19 more)
src/CSSV/caps/: CMakeLists.txt  capsShaders.cpp  createBuffer.cpp  createBuffer.h  createCapsBuffer.cpp  createCapsBuffer.h  createCapsProgram.cpp  createCapsVAO.cpp  createProgram.cpp  createProgram.h  createVAO.cpp  createVAO.h  draw.cpp  draw.h  drawCaps.cpp  shaders.cpp  shaders.h
src/CSSV/sides/: CMakeLists.txt  createBasicEdges.cpp  createBasicEdges.h  createDIBO.cpp  createDIBO.h  createDrawProgram.cpp  createDrawProgram.h  createExtractProgram.cpp  createExtractProgram.h  createInterleavedPlanesEdges.cpp  createInterleavedPlanesEdges.h  createPlanesEdges.cpp  createPlanesEdges.h  createSilhouetteBuffer.cpp  createSilhouetteBuffer.h  createVAO.cpp  createVAO.h  draw.cpp  draw.h  drawShaders.cpp  drawShaders.h  extractShader.h  extractSilhouettes.cpp  extractSilhouettes.h
src/CubeShadowMapping/: CMakeLists.txt  CreateShadowMapShaders.h  CubeShadowMapping.cpp  CubeShadowMapping.h  Params.cpp  Params.h  ShadowMapToShadowMaskShaders.h
src/GSSV/: CMakeLists.txt  GSSV.cpp  GSSV.hpp  GSSV_Shaders.h  GSSV_params.cpp  GSSV_params.h
src/HSSV/: AdjacencyWrapper.cpp  AdjacencyWrapper.h  BitSet.cpp  BitSet.h  CMakeLists.txt  Defines.h  HSSV.cpp  HSSV.h  HighResolutionTimer.cpp  HighResolutionTimer.h  HssvParams.cpp  HssvParams.h  MathOps.cpp  MathOps.h  MultiplicityCoder.cpp  MultiplicityCoder.h  Node.cpp  Node.h  Octree.cpp  Octree.h  OctreeSerializer.cpp  OctreeSerializer.h  Plane.cpp  Plane.h  SidesDrawerBase.cpp  SidesDrawerBase.h
src/HSSV/CPU/: CpuBuilder.cpp  CpuBuilder.h  CpuPotEdgePropagator.cpp  CpuPotEdgePropagator.h  CpuSidesDrawer.cpp  CpuSidesDrawer.h
src/HSSV/CapsDrawer/: HssvCapsDrawer.cpp  HssvCapsDrawer.h  HssvCapsDrawerShaders.h
src/HSSV/GPU/: GpuShaderGenerator.cpp  GpuShaderGenerator.h  GpuSidesDrawer.cpp  GpuSidesDrawer.h  GpuSidesDrawer2.cpp  GpuSidesDrawer2.h  GpuSidesDrawer3.cpp  GpuSidesDrawer3.h
src/RSSV/: BuildStupidHierarchy.cpp  BuildStupidHierarchy.h  CMakeLists.txt  ExtractSilhouettes.cpp  ExtractSilhouettesShader.h  Hierarchy.cpp  Hierarchy.h  Params.cpp  RSSV.cpp  RSSV.h  StupidHierarchyShaders.cpp  StupidHierarchyShaders.h  Tiles.cpp  Tiles.h  allocateHierarchy.cpp  allocateHierarchy.h  buildHierarchy.cpp  buildHierarchy.h  buildHierarchyShader.cpp  buildHierarchyShader.h  collisionShader.cpp  collisionShader.h  computeConfig.cpp  computeConfig.h  computeShadowFrusta.cpp  computeShadowFrusta.h  config.h  configShader.cpp  configShader.h  createBuildHierarchyProgram.cpp  createBuildHierarchyProgram.h  createPropagateAABBProgram.cpp  createPropagateAABBProgram.h  depthToZShader.cpp  depthToZShader.h  extractSilhouettes.cpp  extractSilhouettes.h  extractSilhouettesShader.cpp  extractSilhouettesShader.h  getAABBShader.cpp  (+47 more)
src/RSSV/PerfectResolution/: Build.cpp
src/RSSV/debug/: CMakeLists.txt  drawBridges.cpp  drawBridges.h  drawDebug.cpp  drawDebug.h  drawEdgePlanes.cpp  drawEdgePlanes.h  drawEdges.cpp  drawEdges.h  drawNodePool.cpp  drawNodePool.h  drawSF.cpp  drawSF.h  (+14 more)
src/RSSVold/: BuildHierarchy.h  BuildStupidHierarchy.cpp  CMakeLists.txt  ExtractSilhouettes.cpp  ExtractSilhouettes.h  Params.h  RSSV.h  StupidHierarchyShaders.cpp  StupidHierarchyShaders.h
src/Sintorn/: CMakeLists.txt  ComputeTileSizes.cpp  ComputeTileSizes.h  HierarchicalDepth.cpp  HierarchicalDepth.h  HierarchyShaders.cpp  HierarchyShaders.h  MergeShaders.cpp  MergeShaders.h  MergeStencil.cpp  MergeStencil.h  Param.cpp  Param.h  RasterizationShaders.cpp  RasterizationShaders.h  Rasterize.cpp  Rasterize.h  Shaders.h  ShadowFrusta.cpp  ShadowFrusta.h  ShadowFrustaShaders.cpp  ShadowFrustaShaders.h  Sintorn.cpp  Sintorn.h  Tiles.cpp
src/Sintorn2/: CMakeLists.txt  Sintorn2.cpp  Sintorn2.h  allocateHierarchy.cpp  allocateHierarchy.h  buildHierarchy.cpp  buildHierarchy.h  buildHierarchyShader.cpp  buildHierarchyShader.h  computeConfig.cpp  computeConfig.h  computeShadowFrusta.cpp  computeShadowFrusta.h  config.h  configShader.cpp  configShader.h  createBuildHierarchyProgram.cpp  createBuildHierarchyProgram.h  createPropagateAABBProgram.cpp  createPropagateAABBProgram.h  depthToZShader.cpp  depthToZShader.h  drawDebug.cpp  drawSamples.cpp  dumpData.cpp  dumpData.h  getMortonShader.cpp  getMortonShader.h  merge.cpp  merge.h  mergeShader.cpp  mergeShader.h  mortonShader.cpp  mortonShader.h  param.cpp  param.h  propagateAABB.cpp  propagateAABB.h  propagateAABBShader.cpp  propagateAABBShader.h  (+8 more)
src/TSSV/: CMakeLists.txt  TSSV.cpp  TSSV.hpp  TSSV_Params.cpp  TSSV_Params.h
src/VSSV/: CMakeLists.txt  CapsShader.h  DrawCaps.cpp  DrawCaps.h  DrawSides.cpp  DrawSides.h  DrawSidesUsingAllPlanes.cpp  DrawSidesUsingAllPlanes.h  DrawSidesUsingAllPlanesShader.h  DrawSidesUsingPlanes.cpp  DrawSidesUsingPlanes.h  DrawSidesUsingPlanesShader.h  DrawSidesUsingPoints.cpp  DrawSidesUsingPoints.h  DrawSidesUsingPointsShader.h  Params.cpp  Params.h  Shaders.h  VSSV.cpp  VSSV.h
(+256 files in other folders)
